// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Table
  cellComponent={[Function]}
  data={
    Array [
      Object {
        "content": "foo",
        "firstName": "John",
        "id": 1,
        "lastName": "Doe",
      },
    ]
  }
  layout="fixed"
  rowComponent={[Function]}
  rowKey={[Function]}
>
  <TableSimple
    Cell={[Function]}
    Row={[Function]}
    body={
      Object {
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "children": 1,
                "key": "id",
              },
              Object {
                "children": "John Doe",
                "key": "name",
              },
              Object {
                "children": <span>
                  foo
                </span>,
                "key": "content",
              },
            ],
            "id": 0,
          },
        ],
      }
    }
    data={
      Array [
        Object {
          "content": "foo",
          "firstName": "John",
          "id": 1,
          "lastName": "Doe",
        },
      ]
    }
    head={
      Object {
        "colgroup": Array [
          Object {
            "children": "ID",
            "colSpan": 1,
            "key": "id",
            "rowSpan": 1,
          },
          Object {
            "children": "Name",
            "colSpan": 1,
            "key": "name",
            "rowSpan": 1,
          },
          Object {
            "children": "Content",
            "colSpan": 1,
            "key": "content",
            "rowSpan": 1,
          },
        ],
        "columns": Object {
          "content": Object {
            "children": Array [],
            "depth": 1,
            "key": "content",
            "props": Object {
              "children": "Content",
              "colSpan": 1,
              "key": "content",
              "rowSpan": 1,
            },
            "render": [Function],
          },
          "id": Object {
            "children": Array [],
            "depth": 1,
            "key": "id",
            "props": Object {
              "children": "ID",
              "colSpan": 1,
              "key": "id",
              "rowSpan": 1,
            },
            "render": [Function],
          },
          "name": Object {
            "children": Array [],
            "depth": 1,
            "key": "name",
            "props": Object {
              "children": "Name",
              "colSpan": 1,
              "key": "name",
              "rowSpan": 1,
            },
            "render": [Function],
          },
        },
        "order": Array [
          Object {
            "children": Array [],
            "depth": 1,
            "key": "id",
            "props": Object {
              "children": "ID",
              "colSpan": 1,
              "key": "id",
              "rowSpan": 1,
            },
            "render": [Function],
          },
          Object {
            "children": Array [],
            "depth": 1,
            "key": "name",
            "props": Object {
              "children": "Name",
              "colSpan": 1,
              "key": "name",
              "rowSpan": 1,
            },
            "render": [Function],
          },
          Object {
            "children": Array [],
            "depth": 1,
            "key": "content",
            "props": Object {
              "children": "Content",
              "colSpan": 1,
              "key": "content",
              "rowSpan": 1,
            },
            "render": [Function],
          },
        ],
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "children": "ID",
                "colSpan": 1,
                "key": "id",
                "rowSpan": 1,
              },
              Object {
                "children": "Name",
                "colSpan": 1,
                "key": "name",
                "rowSpan": 1,
              },
              Object {
                "children": "Content",
                "colSpan": 1,
                "key": "content",
                "rowSpan": 1,
              },
            ],
            "id": 0,
          },
        ],
      }
    }
    layout="fixed"
  >
    <div
      className="wrapper"
    >
      <div
        className="scroller"
      >
        <table
          className="table fixed"
          data={
            Array [
              Object {
                "content": "foo",
                "firstName": "John",
                "id": 1,
                "lastName": "Doe",
              },
            ]
          }
        >
          <colgroup>
            <col
              key="id"
              span={1}
            />
            <col
              key="name"
              span={1}
            />
            <col
              key="content"
              span={1}
            />
          </colgroup>
          <thead>
            <Row
              key="0"
            >
              <tr>
                <Cell
                  colSpan={1}
                  head={true}
                  key="id"
                  rowSpan={1}
                  scope="col"
                >
                  <th
                    className=""
                    colSpan={1}
                    rowSpan={1}
                    scope="col"
                  >
                    ID
                  </th>
                </Cell>
                <Cell
                  colSpan={1}
                  head={true}
                  key="name"
                  rowSpan={1}
                  scope="col"
                >
                  <th
                    className=""
                    colSpan={1}
                    rowSpan={1}
                    scope="col"
                  >
                    Name
                  </th>
                </Cell>
                <Cell
                  colSpan={1}
                  head={true}
                  key="content"
                  rowSpan={1}
                  scope="col"
                >
                  <th
                    className=""
                    colSpan={1}
                    rowSpan={1}
                    scope="col"
                  >
                    Content
                  </th>
                </Cell>
              </tr>
            </Row>
          </thead>
          <tbody>
            <Row
              key="0"
            >
              <tr>
                <Cell
                  key="id"
                >
                  <td
                    className=""
                  >
                    1
                  </td>
                </Cell>
                <Cell
                  key="name"
                >
                  <td
                    className=""
                  >
                    John Doe
                  </td>
                </Cell>
                <Cell
                  key="content"
                >
                  <td
                    className=""
                  >
                    <span>
                      foo
                    </span>
                  </td>
                </Cell>
              </tr>
            </Row>
          </tbody>
        </table>
      </div>
    </div>
  </TableSimple>
</Table>
`;

exports[`should render reverse sorted rows 1`] = `
<Table
  cellComponent={[Function]}
  data={
    Array [
      Object {
        "content": "foo",
        "firstName": "John",
        "id": 1,
        "lastName": "Doe",
      },
      Object {
        "content": "bar",
        "firstName": "Jane",
        "id": 2,
        "lastName": "Doe",
      },
      Object {
        "content": "baz",
        "firstName": "Jane",
        "id": 3,
        "lastName": "Do",
      },
    ]
  }
  layout="fixed"
  rowComponent={[Function]}
  rowKey={[Function]}
  sort={
    Array [
      Object {
        "column": "firstName",
        "order": "ASC",
      },
      Object {
        "column": "content",
        "order": "DESC",
      },
    ]
  }
>
  <Sortable
    compareFn={[Function]}
    data={
      Array [
        Object {
          "content": "foo",
          "firstName": "John",
          "id": 1,
          "lastName": "Doe",
        },
        Object {
          "content": "bar",
          "firstName": "Jane",
          "id": 2,
          "lastName": "Doe",
        },
        Object {
          "content": "baz",
          "firstName": "Jane",
          "id": 3,
          "lastName": "Do",
        },
      ]
    }
  >
    <TableSimple
      Cell={[Function]}
      Row={[Function]}
      body={
        Object {
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "children": 3,
                  "key": "id",
                },
                Object {
                  "children": "Jane Do",
                  "key": "name",
                },
                Object {
                  "children": <span>
                    baz
                  </span>,
                  "key": "content",
                },
              ],
              "id": 0,
            },
            Object {
              "columns": Array [
                Object {
                  "children": 2,
                  "key": "id",
                },
                Object {
                  "children": "Jane Doe",
                  "key": "name",
                },
                Object {
                  "children": <span>
                    bar
                  </span>,
                  "key": "content",
                },
              ],
              "id": 1,
            },
            Object {
              "columns": Array [
                Object {
                  "children": 1,
                  "key": "id",
                },
                Object {
                  "children": "John Doe",
                  "key": "name",
                },
                Object {
                  "children": <span>
                    foo
                  </span>,
                  "key": "content",
                },
              ],
              "id": 2,
            },
          ],
        }
      }
      data={
        Array [
          Object {
            "content": "foo",
            "firstName": "John",
            "id": 1,
            "lastName": "Doe",
          },
          Object {
            "content": "bar",
            "firstName": "Jane",
            "id": 2,
            "lastName": "Doe",
          },
          Object {
            "content": "baz",
            "firstName": "Jane",
            "id": 3,
            "lastName": "Do",
          },
        ]
      }
      head={
        Object {
          "colgroup": Array [
            Object {
              "children": "ID",
              "colSpan": 1,
              "key": "id",
              "rowSpan": 1,
            },
            Object {
              "children": "Name",
              "colSpan": 1,
              "key": "name",
              "rowSpan": 1,
            },
            Object {
              "children": "Content",
              "colSpan": 1,
              "key": "content",
              "rowSpan": 1,
            },
          ],
          "columns": Object {
            "content": Object {
              "children": Array [],
              "depth": 1,
              "key": "content",
              "props": Object {
                "children": "Content",
                "colSpan": 1,
                "key": "content",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            "id": Object {
              "children": Array [],
              "depth": 1,
              "key": "id",
              "props": Object {
                "children": "ID",
                "colSpan": 1,
                "key": "id",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            "name": Object {
              "children": Array [],
              "depth": 1,
              "key": "name",
              "props": Object {
                "children": "Name",
                "colSpan": 1,
                "key": "name",
                "rowSpan": 1,
              },
              "render": [Function],
            },
          },
          "order": Array [
            Object {
              "children": Array [],
              "depth": 1,
              "key": "id",
              "props": Object {
                "children": "ID",
                "colSpan": 1,
                "key": "id",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            Object {
              "children": Array [],
              "depth": 1,
              "key": "name",
              "props": Object {
                "children": "Name",
                "colSpan": 1,
                "key": "name",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            Object {
              "children": Array [],
              "depth": 1,
              "key": "content",
              "props": Object {
                "children": "Content",
                "colSpan": 1,
                "key": "content",
                "rowSpan": 1,
              },
              "render": [Function],
            },
          ],
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "children": "ID",
                  "colSpan": 1,
                  "key": "id",
                  "rowSpan": 1,
                },
                Object {
                  "children": "Name",
                  "colSpan": 1,
                  "key": "name",
                  "rowSpan": 1,
                },
                Object {
                  "children": "Content",
                  "colSpan": 1,
                  "key": "content",
                  "rowSpan": 1,
                },
              ],
              "id": 0,
            },
          ],
        }
      }
      layout="fixed"
    >
      <div
        className="wrapper"
      >
        <div
          className="scroller"
        >
          <table
            className="table fixed"
            data={
              Array [
                Object {
                  "content": "foo",
                  "firstName": "John",
                  "id": 1,
                  "lastName": "Doe",
                },
                Object {
                  "content": "bar",
                  "firstName": "Jane",
                  "id": 2,
                  "lastName": "Doe",
                },
                Object {
                  "content": "baz",
                  "firstName": "Jane",
                  "id": 3,
                  "lastName": "Do",
                },
              ]
            }
          >
            <colgroup>
              <col
                key="id"
                span={1}
              />
              <col
                key="name"
                span={1}
              />
              <col
                key="content"
                span={1}
              />
            </colgroup>
            <thead>
              <Row
                key="0"
              >
                <tr>
                  <Cell
                    colSpan={1}
                    head={true}
                    key="id"
                    rowSpan={1}
                    scope="col"
                  >
                    <th
                      className=""
                      colSpan={1}
                      rowSpan={1}
                      scope="col"
                    >
                      ID
                    </th>
                  </Cell>
                  <Cell
                    colSpan={1}
                    head={true}
                    key="name"
                    rowSpan={1}
                    scope="col"
                  >
                    <th
                      className=""
                      colSpan={1}
                      rowSpan={1}
                      scope="col"
                    >
                      Name
                    </th>
                  </Cell>
                  <Cell
                    colSpan={1}
                    head={true}
                    key="content"
                    rowSpan={1}
                    scope="col"
                  >
                    <th
                      className=""
                      colSpan={1}
                      rowSpan={1}
                      scope="col"
                    >
                      Content
                    </th>
                  </Cell>
                </tr>
              </Row>
            </thead>
            <tbody>
              <Row
                key="0"
              >
                <tr>
                  <Cell
                    key="id"
                  >
                    <td
                      className=""
                    >
                      3
                    </td>
                  </Cell>
                  <Cell
                    key="name"
                  >
                    <td
                      className=""
                    >
                      Jane Do
                    </td>
                  </Cell>
                  <Cell
                    key="content"
                  >
                    <td
                      className=""
                    >
                      <span>
                        baz
                      </span>
                    </td>
                  </Cell>
                </tr>
              </Row>
              <Row
                key="1"
              >
                <tr>
                  <Cell
                    key="id"
                  >
                    <td
                      className=""
                    >
                      2
                    </td>
                  </Cell>
                  <Cell
                    key="name"
                  >
                    <td
                      className=""
                    >
                      Jane Doe
                    </td>
                  </Cell>
                  <Cell
                    key="content"
                  >
                    <td
                      className=""
                    >
                      <span>
                        bar
                      </span>
                    </td>
                  </Cell>
                </tr>
              </Row>
              <Row
                key="2"
              >
                <tr>
                  <Cell
                    key="id"
                  >
                    <td
                      className=""
                    >
                      1
                    </td>
                  </Cell>
                  <Cell
                    key="name"
                  >
                    <td
                      className=""
                    >
                      John Doe
                    </td>
                  </Cell>
                  <Cell
                    key="content"
                  >
                    <td
                      className=""
                    >
                      <span>
                        foo
                      </span>
                    </td>
                  </Cell>
                </tr>
              </Row>
            </tbody>
          </table>
        </div>
      </div>
    </TableSimple>
  </Sortable>
</Table>
`;

exports[`should render sorted rows 1`] = `
<Table
  cellComponent={[Function]}
  data={
    Array [
      Object {
        "content": "foo",
        "firstName": "John",
        "id": 1,
        "lastName": "Doe",
      },
      Object {
        "content": "foo",
        "firstName": "Jane",
        "id": 2,
        "lastName": "Doe",
      },
    ]
  }
  layout="fixed"
  rowComponent={[Function]}
  rowKey={[Function]}
  sort={
    Array [
      "content",
    ]
  }
>
  <Sortable
    compareFn={[Function]}
    data={
      Array [
        Object {
          "content": "foo",
          "firstName": "John",
          "id": 1,
          "lastName": "Doe",
        },
        Object {
          "content": "foo",
          "firstName": "Jane",
          "id": 2,
          "lastName": "Doe",
        },
      ]
    }
  >
    <TableSimple
      Cell={[Function]}
      Row={[Function]}
      body={
        Object {
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "children": 1,
                  "key": "id",
                },
                Object {
                  "children": "John Doe",
                  "key": "name",
                },
                Object {
                  "children": <span>
                    foo
                  </span>,
                  "key": "content",
                },
              ],
              "id": 0,
            },
            Object {
              "columns": Array [
                Object {
                  "children": 2,
                  "key": "id",
                },
                Object {
                  "children": "Jane Doe",
                  "key": "name",
                },
                Object {
                  "children": <span>
                    foo
                  </span>,
                  "key": "content",
                },
              ],
              "id": 1,
            },
          ],
        }
      }
      data={
        Array [
          Object {
            "content": "foo",
            "firstName": "John",
            "id": 1,
            "lastName": "Doe",
          },
          Object {
            "content": "foo",
            "firstName": "Jane",
            "id": 2,
            "lastName": "Doe",
          },
        ]
      }
      head={
        Object {
          "colgroup": Array [
            Object {
              "children": "ID",
              "colSpan": 1,
              "key": "id",
              "rowSpan": 1,
            },
            Object {
              "children": "Name",
              "colSpan": 1,
              "key": "name",
              "rowSpan": 1,
            },
            Object {
              "children": "Content",
              "colSpan": 1,
              "key": "content",
              "rowSpan": 1,
            },
          ],
          "columns": Object {
            "content": Object {
              "children": Array [],
              "depth": 1,
              "key": "content",
              "props": Object {
                "children": "Content",
                "colSpan": 1,
                "key": "content",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            "id": Object {
              "children": Array [],
              "depth": 1,
              "key": "id",
              "props": Object {
                "children": "ID",
                "colSpan": 1,
                "key": "id",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            "name": Object {
              "children": Array [],
              "depth": 1,
              "key": "name",
              "props": Object {
                "children": "Name",
                "colSpan": 1,
                "key": "name",
                "rowSpan": 1,
              },
              "render": [Function],
            },
          },
          "order": Array [
            Object {
              "children": Array [],
              "depth": 1,
              "key": "id",
              "props": Object {
                "children": "ID",
                "colSpan": 1,
                "key": "id",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            Object {
              "children": Array [],
              "depth": 1,
              "key": "name",
              "props": Object {
                "children": "Name",
                "colSpan": 1,
                "key": "name",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            Object {
              "children": Array [],
              "depth": 1,
              "key": "content",
              "props": Object {
                "children": "Content",
                "colSpan": 1,
                "key": "content",
                "rowSpan": 1,
              },
              "render": [Function],
            },
          ],
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "children": "ID",
                  "colSpan": 1,
                  "key": "id",
                  "rowSpan": 1,
                },
                Object {
                  "children": "Name",
                  "colSpan": 1,
                  "key": "name",
                  "rowSpan": 1,
                },
                Object {
                  "children": "Content",
                  "colSpan": 1,
                  "key": "content",
                  "rowSpan": 1,
                },
              ],
              "id": 0,
            },
          ],
        }
      }
      layout="fixed"
    >
      <div
        className="wrapper"
      >
        <div
          className="scroller"
        >
          <table
            className="table fixed"
            data={
              Array [
                Object {
                  "content": "foo",
                  "firstName": "John",
                  "id": 1,
                  "lastName": "Doe",
                },
                Object {
                  "content": "foo",
                  "firstName": "Jane",
                  "id": 2,
                  "lastName": "Doe",
                },
              ]
            }
          >
            <colgroup>
              <col
                key="id"
                span={1}
              />
              <col
                key="name"
                span={1}
              />
              <col
                key="content"
                span={1}
              />
            </colgroup>
            <thead>
              <Row
                key="0"
              >
                <tr>
                  <Cell
                    colSpan={1}
                    head={true}
                    key="id"
                    rowSpan={1}
                    scope="col"
                  >
                    <th
                      className=""
                      colSpan={1}
                      rowSpan={1}
                      scope="col"
                    >
                      ID
                    </th>
                  </Cell>
                  <Cell
                    colSpan={1}
                    head={true}
                    key="name"
                    rowSpan={1}
                    scope="col"
                  >
                    <th
                      className=""
                      colSpan={1}
                      rowSpan={1}
                      scope="col"
                    >
                      Name
                    </th>
                  </Cell>
                  <Cell
                    colSpan={1}
                    head={true}
                    key="content"
                    rowSpan={1}
                    scope="col"
                  >
                    <th
                      className=""
                      colSpan={1}
                      rowSpan={1}
                      scope="col"
                    >
                      Content
                    </th>
                  </Cell>
                </tr>
              </Row>
            </thead>
            <tbody>
              <Row
                key="0"
              >
                <tr>
                  <Cell
                    key="id"
                  >
                    <td
                      className=""
                    >
                      1
                    </td>
                  </Cell>
                  <Cell
                    key="name"
                  >
                    <td
                      className=""
                    >
                      John Doe
                    </td>
                  </Cell>
                  <Cell
                    key="content"
                  >
                    <td
                      className=""
                    >
                      <span>
                        foo
                      </span>
                    </td>
                  </Cell>
                </tr>
              </Row>
              <Row
                key="1"
              >
                <tr>
                  <Cell
                    key="id"
                  >
                    <td
                      className=""
                    >
                      2
                    </td>
                  </Cell>
                  <Cell
                    key="name"
                  >
                    <td
                      className=""
                    >
                      Jane Doe
                    </td>
                  </Cell>
                  <Cell
                    key="content"
                  >
                    <td
                      className=""
                    >
                      <span>
                        foo
                      </span>
                    </td>
                  </Cell>
                </tr>
              </Row>
            </tbody>
          </table>
        </div>
      </div>
    </TableSimple>
  </Sortable>
</Table>
`;
